--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,4 @@
 .App{
   min-height: 100vh;
-  background-color: #ffeadb;
-}
-
-.search-form{
-  min-height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px 5px;
-}
-
-.search-bar{
-  width: 35%;
-  border: none;
-  padding: 20px;
-  font-size: 1.5rem;
-}
-
-.search-button{
-  background: #f7c5a8;
-  border: none;
-  padding: 20px 20px;
-  color: white;
-  font-size: 1.5rem;
-}
-
-.recipes{
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  background-color: rgb(223, 223, 196);
 }
