--- a/src/Footer/footer.module.css
+++ b/src/Footer/footer.module.css
@@ -1,9 +1,8 @@
 .footer{
     margin-top: 1rem;
     padding: 1rem;
-    background-color: #ff9a76;
+    background-color: rgb(85, 136, 28);
     color: white;
-    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
