--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -10,5 +14,10 @@ body {
 
 .leaflet-container{
   width: 50%;
-  height: 50vh;
+  height: 60%;
+  position: relative;
+  left: 45%;
+  top: 20%;
+  border-radius: 20px;
+  box-shadow: 0px 0px 8px 8px rgb(187, 187, 147);
 }
