--- a/src/Header/header.module.css
+++ b/src/Header/header.module.css
@@ -28,7 +28,7 @@ a, a:hover{
 }
 
 .btnStart{
-    font-size: 1.2em !important;
-    border-color: rgb(224, 224, 83) !important;
-    color: rgb(224, 224, 83) !important;
+    font-size: 1.6rem !important;
+    border-color: #fbf6f0 !important;
+    color: #fbf6f0 !important;
 }
