--- a/src/Components/css/calc-res.module.css
+++ b/src/Components/css/calc-res.module.css
@@ -1,23 +1,23 @@
 .container{
     /* display: none; */
     position: relative;
-    width: 100%;
-    height: 100vh;
     font-family: 'Noto Serif', serif;
 }
 
 .resultsContainer{
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    /* width: 90%; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 10px;
+    /* flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 .dataContainer{
     width: 80%;
-    height: 80%;
+    /* height: 80%; */
+    margin: auto;
     background-color: white;
     border-radius: 20px;
     padding: 15px;
