--- a/src/Components/css/component.module.css
+++ b/src/Components/css/component.module.css
@@ -1,6 +1,10 @@
 .mainContainer{
     width: auto;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eeeeee;
 }
 
 .inputForm{
@@ -23,28 +27,96 @@
   
 .searchBar{
     width: 100%;
-    border: none;
-    border-radius: 10px;
+    border: solid 1px #393e46;
     padding: 10px;
     margin: 10px;
     font-size: 1.5rem;
-    color: rgb(85, 136, 28);
+    color: #222831;
     outline: none;
 }
   
 .searchButton{
     outline-style: none !important;
-    background-color:rgb(85, 136, 28);
-    border: none;
-    border-radius: 20px;
+    background-color: #00adb5;
+    /* border: solid 1px #393e46; */
+    border: none !important;
     padding: 10px 10px;
-    color: white;
+    /* margin: 10px; */
+    color: #222831;
     font-size: 1.5rem;
+    width: auto;
 }
 
-.searchButton:active, 
- .addButton:focus 
- {
-     border: 0.4rem solid #adce74;
-     color:#fffaa4;
-  }
+.btnLink {
+    outline-style: none !important;
+    background-color: #00adb5;
+    border: solid 1px #393e46;
+    /* padding: 10px 10px; */
+    margin: 10px;
+    color: #222831;
+    font-size: 1.5rem;
+    width: 50%;
+    text-align: center;
+}
+
+.btnLink:active {
+     border: 0.2rem solid #393e46;
+     color:#eeeeee;
+}
+
+.comp{
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+.row{
+    width: 100%;
+    height: 50vh;
+}
+
+@media only screen and (max-width: 990px) {
+    .row{
+        height: 100vh;
+    }
+
+    .comp{
+        display: flex;
+        justify-content: center;
+        padding: 50px 0;
+        height: 50%;
+    }
+
+    .searchForm{
+        min-height: 10vh;
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .searchBar{
+        width: 100%;
+        border: none;
+        border-radius: 10px;
+        font-size: 1rem;
+        color: black;
+        outline: none;
+    }
+
+    .btnLink {
+        width: 50%;
+        text-align: center;
+    }
+
+    .searchButton{
+        outline-style: none !important;
+        background-color: #00adb5;
+        border: solid 1px #393e46;
+        color: #222831;
+        font-size: 1rem;
+        width: auto;
+    }
+}
+
