--- a/src/Header/header.module.css
+++ b/src/Header/header.module.css
@@ -1,34 +1,27 @@
 .header{
-    /* background-color: #ff9a76; */
     width: auto;
-    height: 100vh;
-    background-image: url('../images/18824958.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    text-align: center;
-    padding: 5px;    
-}
-
-a, a:hover{
-    text-decoration: none !important;
-}
-
-.container{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    padding: 10px;
+    height: 20%;
+    padding: 5px;
+    background-color: #393e46;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 }
 
 .headerText{
-    font-size: 5rem;
-    color:  rgb(255, 197, 88);
+    font-size: 2rem;
+    color: #fdfaf6;
+    margin: 10px auto 10px 50px;
 }
 
-.btnStart{
-    font-size: 1.6rem !important;
-    border-color: #fbf6f0 !important;
-    color: #fbf6f0 !important;
+@media only screen and (max-width: 990px) {
+    .headerText{
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    .headerText{
+        font-size: 1rem;
+    }
 }
